syntax = "proto3";

package com.notnite.alpha;
option csharp_namespace = "Alpha.Proto";

message C2SMessage {
  oneof message {
    Ping ping = 1;
    MemoryRequest memory_request = 2;
    MemoryWrite memory_write = 3;
  }
}

message S2CMessage {
  oneof message {
    Pong pong = 1;
    MemoryResult memory_result = 2;
    MemoryUpdate memory_update = 3;
  }
}

message Ping { }

message Pong {
  string game_version = 1;
  int64 text_base = 2;
  int64 data_base = 3;
}

message MemoryRequest {
  int64 start = 1;
  int64 end = 2;
  string uuid = 3;
}

message MemoryResult {
  bytes data = 1;
  string uuid = 2;
}

message MemoryWrite {
  repeated WritePayload payloads = 1;
}

message WritePayload {
  int64 address = 1;
  bytes data = 2;
}

message MemoryUpdate {
  int64 address = 1;
  bytes data = 2;
}
